# gmtkbabel

./: .gitignore  AUTHORS  COPYING  COPYING.txt  Changelog  Makefile  Makefile.am  README  README.txt  common.sh  configure.ac  download.sh  erase.sh  gmtkbabel  gmtkbabel.1  gmtkbabel.conf  gmtkbabel_0.1.orig.tar.gz.delta  gmtkbabel_0.1.orig.tar.gz.id  index.html  set_format.sh  set_frequency.sh  style.css
debian/: changelog  control  copyright  gbp.conf  menu.ex  watch
debian/patches/: 00-drop_shbangs.patch  series
debian/upstream/: metadata
po/: LINGUAS  Makefile.in  Makevars  POTFILES.in  en@boldquot.po  en@quot.po  gmtkbabel.pot  it.po
src/: Makefile.am  common.sh  download.sh  erase.sh  gmtkbabel  set_format.sh  set_frequency.sh
